# HuffZip

./: .gitignore  CMakeLists.txt  README.md
include/: BitStream.hpp  FileEntry.hpp  HuffmanCompressor.hpp  HuffmanException.hpp  HuffmanNode.hpp  HuffmanTree.hpp
src/: BitStream.cpp  FileEntry.cpp  HuffmanCompressor.cpp  HuffmanException.cpp  HuffmanNode.cpp  HuffmanTree.cpp  main.cpp
test/: test_compression.cpp  test_decompression.cpp
test/test_files/: huffzip.huff  huffzip.txt
